--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vue-lazyload",
+  "name": "@wuchong/vue-lazyload",
   "version": "1.0.0",
-  "description": "",
+  "description": "A lazyload library for Vue2.x",
   "main": "index.js",
   "scripts": {
     "build": "node build"
